# src/main/resources/openapi.yml
@@ -40,6 +40,23 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Operator"
+  /client/{companyName}:
+    get:
+      summary: Get client by companyName
+      operationId: checkClient
+      parameters:
+        - name: companyName
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Client found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Client"
 components:
   schemas:
     Operator:
@@ -47,7 +64,7 @@ components:
       properties:
         id:
           type: integer
-        userId:
+        operatorId:
           type: integer
         surname:
           type: string
@@ -58,3 +75,16 @@ components:
         - name
         - surname
         - userId
+    Client:
+      type: object
+      properties:
+        id:
+          type: integer
+        clientId:
+          type: integer
+        companyName:
+          type: string
+      required:
+        - id
+        - clientId
+        - companyName
